Fixed extra spacing on jumbotron.

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -5,7 +5,7 @@
 
 //Bootstrap override
 .jumbotron {
-  padding-top: 0px;
+  padding-top: 0;
   padding-bottom: 0;
 }
 
